<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UniSupply</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="action_testing">testing</string>
    <string name="idSpinnerPrompt">ID Type</string>

    <string name="scan_barcode">Scan Barcode</string>
    <string name="custom_layout">Custom Layout</string>
    <string name="scan_from_fragment">Scan from fragment</string>
    <string name="encode_text">Encode Text</string>


    <string name="add_household">Add a Household</string>
    <string name="site_details">Site Details</string>
    <string name="site_name">Site Name:</string>
    <string name="geolocation_data">Geolocation Data:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="household_details">Household Details</string>

    <string name="id_number">ID Number:</string>
    <string name="id_type">ID Type:</string>
    <string name="phone_number">Phone No.:</string>
    <string name="family_surname">Family Surname:</string>

    <string name="first_name">First Name:</string>
    <string name="middle_name">Middle Name:</string>
    <string name="list_of_children">List of Children:</string>
    <string name="add_child">Add Child</string>
    <string name="next">Next</string>

    <string name="success_title">Household Added Successfully to Site!</string>
    <string name="summary_psge">Summary Page</string>
    <string name="number_site">No. of Households collected on site:</string>
    <string name="edit_last_entry">Edit Last Entry</string>
    <string name="add_new_household">Add New Household</string>

    <string name="select_new_site">Select a New Site</string>
    <string name="home_screen">Go to Home Screen</string>
    <string name="search_households">Search Households</string>
    <string name="complete_kit">Complete Kit</string>
    <string name="age">Age*:</string>
    <string name="gender">Gender:</string>
    <string name="edit_child">Edit Child</string>

    <string name="remove_child">Remove Child</string>

    <string name="disclaimer">*Please use child\'s age at last birthday.</string>
    <string name="barcode_number">Barcode Number:</string>
    <string name="edit_household">Edit Household</string>

    <string name="reason_edit">Reason for Edit:</string>
    <string name="save_household">Save Household</string>

    <string name="delete_household">Delete Household</string>

    <string name="set_barcode">Set Barcode</string>

    <string name="kit_size">Kit Size:</string>
    <string name="remove_kit">Remove Kit</string>
    <string name="save_changes">Save Changes</string>

    <string name="edit_kit">Edit Kit</string>

    <string name="select_site_info">Select Site Information</string>
    <string name="get_site">Get Site</string>
    <string name="go_back">Go Back</string>

    <string name="correct">Correct</string>
    <string name="kit_list">Kit List:</string>
    <string name="complete">Complete</string>
    <string name="not_complete">Partially Complete</string>

    <string name="begin_assessments">Begin Assessments</string>
    <string name="voucher_distribution">Begin Voucher Distribution</string>
    <string name="main_scan_barcode">Scan a Barcode</string>
    <string name="main_search_households">Search Households</string>
    <string name="select_location_title">Select Location</string>
    <string name="select_sdclocation_title">Select SDC Location</string>


    <string name="assessments">Assessments</string>
    <string name="distribution">Distribution</string>
    <string name="vouchers">Vouchers</string>
    <string name="task_select">Select Task</string>
    <string name="sync_status">Sync Status</string>
    <string name="network_status">Network Status:</string>
    <string name="progress_pull">Download Progress:</string>
    <string name="progress_push">Upload Progress:</string>

    <string name="force_sync">Force Sync</string>
    <string name="id_notes">Notes:</string>
    <string name="relationship_type">Relationship to Children:</string>
    <string name="registered">Select Household registration type</string>
    <string name="yes_unhcr">Yes</string>
    <string name="no_unhcr">No</string>
    <string name="start_distribution">Start Distribution</string>

    <string name="new_distribution">New Distribution</string>
    <string name="redeem_vouchers">Redeem Vouchers</string>

    <string name="select_location_title_SDC">Select SDC Location</string>
    <string name="name">Name</string>
    <string name="voucher_code">Voucher Code</string>
    <string name="guardians_name">Guardian Name:</string>
    <string name="number_of_children">Number of Children:</string>
    <string name="go_back_vouchers">If you go back all data will be lost. Procced?</string>

    <string name="main_person_name">Organizer: </string>
    <string name="institution_type">Institution Type: </string>

    <string name="institution_details">Institution Details</string>
    <string name="title_activity_consent">ConsentActivity</string>


</resources>
