<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/success_title"
            android:textSize="22sp"
            android:gravity="center"
            android:id="@+id/textView"/>


    <ImageView
            android:background="@drawable/abc_item_background_holo_dark"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"

            android:textAppearance="?android:attr/textAppearanceLarge"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_psge"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"  android:paddingBottom="10dp"  android:paddingTop="20dp"
            android:layout_height="wrap_content">



        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/site_name"
                android:textSize="18sp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"/>
        <TextView
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView_PCode"
                />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"  android:paddingBottom="10dp"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/number_site"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:paddingLeft="10dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp"
                android:id="@+id/textView_deviceIncrement"
                />

    </LinearLayout>




    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"  android:paddingBottom="10dp"
            android:layout_height="wrap_content"  android:layout_gravity="center"
            android:gravity="center" android:layout_marginTop="20dp">



    <Button
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/custombutton"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="23dp"
            android:text="@string/edit_last_entry"
            android:id="@+id/button_editCurrentBeneficiary"/>
        <Button
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="23dp"

                android:layout_marginLeft="10dp"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/add_new_household"
                android:background="@drawable/custombutton_green"
                android:id="@+id/button_addNewBeneficiary"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"  android:paddingBottom="10dp"
            android:layout_height="wrap_content"  android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >
    <Button
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:textSize="23dp"
            android:background="@drawable/custombutton"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/select_new_site"
            android:id="@+id/button_selectNewSite"/>
    <Button
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="23dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/custombutton"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/home_screen"
            android:id="@+id/button_goToHomeScreen"/>
    </LinearLayout>

</LinearLayout>