<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:id="@+id/layout_child"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add_child"
            android:layout_marginTop="10sp"
            android:id="@+id/textView_titleText" android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:paddingBottom="10dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_gravity="center"
                  android:gravity="center"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:weightSum="1"
            android:layout_marginTop="20dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/age"
                android:textSize="20sp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"/>
        <Spinner
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"

                android:entries="@array/age_array"
                android:id="@+id/spinner_age"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gender"
                android:textSize="20sp"

                android:paddingRight="10dp"

                android:paddingLeft="10dp"/>
        <Spinner
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:entries="@array/gender_array"
                android:textSize="15sp"
                android:id="@+id/spinner_gender"/>


    </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/layout_child_buttons"
            android:layout_marginTop="45dp"
            android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/add_child"
            android:textSize="20sp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"

            android:background="@drawable/custombutton_green"

            android:id="@+id/add_child_btn" android:layout_gravity="center_horizontal"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/edit_child"
                android:textSize="20sp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/custombutton"

                android:id="@+id/edit_child_btn" android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_child"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="20sp"
            android:background="@drawable/custombutton_red"

            android:id="@+id/remove_child_btn" android:layout_gravity="center_horizontal"/>



    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/disclaimer"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="20sp"
                />

</LinearLayout>